@@ -39,33 +39,33 @@ If a Service Gateway is also created by the module with `create_service_gateway 
 
 terraform-oci-vcn modules have two optional Input Variables to inject user defined route rules into `internet-route` route table and `nat-route` route table using respectively:
 
-- `internet_gateway_route_rules` with the following schema:
+- `internet_gateway_route_rules` defined as a `list(map(string))` with the following expected schema:
 
 [source,hcl]
 ----
 variable "internet_gateway_route_rules" {
   description = "(Updatable) List of routing rules to add to Internet Gateway Routing Table"
   type = list(object({
-    destination       = string
-    destination_type  = string
-    network_entity_id = string
-    description       = string
+    destination       = string # required
+    destination_type  = string # required
+    network_entity_id = string # required
+    description       = string # optional
   }))
   default = null
 }
 ----
 
-- `nat_gateway_route_rules` with the following schema:
+- `nat_gateway_route_rules` defined as a `list(map(string))` with the following expected schema:
 
 [source,hcl]
 ----
 variable "nat_gateway_route_rules" {
   description = "(Updatable) List of routing rules to add to NAT Gateway Routing Table"
   type = list(object({
-    destination       = string
-    destination_type  = string
-    network_entity_id = string
-    description       = string
+    destination       = string # required
+    destination_type  = string # required
+    network_entity_id = string # required
+    description       = string # optional
   }))
   default = null
 }
